<resources>
    <string name="app_name">Project Dunkirk</string>
    <string name="action_settings">Settings</string>
    <string name="title">Disaster Relief Utility</string>
    <string name="profile">Profile</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="numParty"># of people in party</string>
    <string name="emergencyStatus">Select Personal Status</string>
    <string name="emergencyLevel">Select Emergency Level</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="emergencyTypes">Select Emergency Type</string>
    <string name="emergencyCondition">Select Emergency Condition</string>
    <string name="dialog_ok">OKAY</string>
    <string name="updateProfile">SUBMIT / UPDATE PROFILE</string>
    <string name="specialCondition">SPECIAL CONDITION</string>
</resources>
